test/cases/bad/bad057.lat
// Invalid int range

int main() {
    int x = 9223372036854775807;
    int y = 9223372036854775808;
    return 0;
}